# Simple-Flask-Blog

./: pyproject.toml
blog_app/: __init__.py  config.py
blog_app/blueprints/admin/: admin_bp.py
blog_app/blueprints/admin/category/: category.py  forms.py
blog_app/blueprints/admin/posts/: forms.py  post.py
blog_app/blueprints/admin/user/: forms.py  user.py
blog_app/blueprints/auth/: auth_bp.py  forms.py
blog_app/extensions/menu_builder/: MenuBuilder.py
blog_app/models/: Category.py  Config.py  Post.py  User.py
blog_app/templates/admin/: index.html
blog_app/templates/admin/category/: index.html
blog_app/templates/admin/post/: index.html
blog_app/templates/admin/user/: index.html
blog_app/templates/auth/: login.html  register.html
blog_app/templates/macros/: buttons.html  forms.html
blog_app/templates/utils/: base.html  base_admin.html
blog_app/use_cases/config/: create_base_config.py
blog_app/use_cases/posts/: create_post.py
blog_app/use_cases/user/: create_user.py  delete_user.py  query_user.py  update_user.py
blog_app/utils/: ApiView.py  GridView.py  ViewTable.py
migrations/versions/: 2b1308e19a0b_added_the_config_model.py  61f3194748d7_added_sample_user_remove_the_password_.py  67a739a215be_added_sample_post_model.py  76ad20a1be89_added_sample_user.py  7b63f76a377b_added_the_password_item_to_the_user_.py  90b6d3ffd2db_added_the_category_app.py
